--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Ignore the entire folder
-venv/
+.venv/
 .vscode/
 knn_classifier/knn_dataset.csv
 knn_classifier/KNN_classifierl.pkl
 knn_classifier/networking/__pycache__
 __pycache__
 
+git
